[gd_scene load_steps=28 format=2]

[ext_resource path="res://Comet.gd" type="Script" id=1]
[ext_resource path="res://Assets/ShieldAnimation/0.png" type="Texture" id=2]
[ext_resource path="res://Assets/ShieldAnimation/1.png" type="Texture" id=3]
[ext_resource path="res://Assets/ShieldAnimation/2.png" type="Texture" id=4]
[ext_resource path="res://Assets/ShieldAnimation/3.png" type="Texture" id=5]
[ext_resource path="res://Assets/ShieldAnimation/4.png" type="Texture" id=6]
[ext_resource path="res://Assets/ShieldAnimation/5.png" type="Texture" id=7]
[ext_resource path="res://Assets/ShieldAnimation/6.png" type="Texture" id=8]
[ext_resource path="res://Assets/ShieldAnimation/7.png" type="Texture" id=9]
[ext_resource path="res://Assets/ShieldAnimation/8.png" type="Texture" id=10]
[ext_resource path="res://Assets/ShieldAnimation/9.png" type="Texture" id=11]
[ext_resource path="res://Assets/ShieldAnimation/10.png" type="Texture" id=12]
[ext_resource path="res://Assets/ShieldAnimation/11.png" type="Texture" id=13]
[ext_resource path="res://Assets/ShieldAnimation/12.png" type="Texture" id=14]
[ext_resource path="res://Assets/ShieldAnimation/13.png" type="Texture" id=15]
[ext_resource path="res://Assets/ShieldAnimation/14.png" type="Texture" id=16]
[ext_resource path="res://Assets/Comet.png" type="Texture" id=17]
[ext_resource path="res://Assets/Light.png" type="Texture" id=18]
[ext_resource path="res://Audio/Bounce.wav" type="AudioStream" id=19]
[ext_resource path="res://Camera2D.gd" type="Script" id=20]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.0
bounce = 1.0

[sub_resource type="CircleShape2D" id=2]
radius = 124.476

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ) ],
"loop": true,
"name": "default",
"speed": 24.0
} ]

[sub_resource type="Gradient" id=4]
colors = PoolColorArray( 0.368627, 0.741176, 0.92549, 0.0784314, 0.196078, 0.231373, 0.309804, 0 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
spread = 90.0
gravity = Vector3( 0, 0, 0 )
angular_velocity = 7.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 5 )

[sub_resource type="CircleShape2D" id=7]
radius = 40.0

[node name="Comet" type="RigidBody2D" groups=[
"Balls",
]]
input_pickable = true
physics_material_override = SubResource( 1 )
contacts_reported = 10
contact_monitor = true
linear_velocity = Vector2( 1, 0 )
linear_damp = 0.0
angular_velocity = 1.0
angular_damp = 0.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}
speed = -1000

[node name="Shield" type="Area2D" parent="."]
modulate = Color( 1, 1, 1, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
scale = Vector2( 0.6, 0.6 )
shape = SubResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="Shield"]
frames = SubResource( 3 )
frame = 6
playing = true

[node name="Trail" type="Particles2D" parent="."]
amount = 40
speed_scale = 3.0
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 17 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 18 )
texture_scale = 0.3
color = Color( 0.027451, 0.976471, 0.862745, 1 )
range_layer_min = -1

[node name="Sprite" type="Sprite" parent="Light2D"]
texture = ExtResource( 17 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2( 1.25, 1.25 )
shape = SubResource( 7 )

[node name="Tween" type="Tween" parent="."]

[node name="BounceSound" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 19 )
volume_db = -20.0

[node name="PitchTimer" type="Timer" parent="BounceSound"]
wait_time = 0.5
one_shot = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
process_mode = 0
limit_left = -10000
limit_top = -10000
limit_right = 10000
limit_bottom = 10000
limit_smoothed = true
smoothing_enabled = true
drag_margin_left = 0.0
drag_margin_top = 0.0
drag_margin_right = 0.0
drag_margin_bottom = 0.0
editor_draw_limits = true
script = ExtResource( 20 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
[connection signal="body_entered" from="." to="." method="_on_Comet_body_entered"]
[connection signal="area_entered" from="Shield" to="." method="_on_Shield_area_entered"]
[connection signal="timeout" from="BounceSound/PitchTimer" to="." method="_on_PitchTimer_timeout"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
